--- a/public/css/main.css
+++ b/public/css/main.css
@@ -48,7 +48,18 @@
 }
 
 .main {
-    margin: 10px auto;
-    width: 80%;
-    padding: 10px;
+    margin: 15px auto;
+    width: 75%;
+}
+
+@media screen and (max-width: 750px) {
+    .main {
+        width: 100%;
+        padding: 0;
+    }
+
+    #add-student-wrapper {
+        width: 99%;
+        padding: 5px;
+    }
 }
