--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,7 +11,11 @@
 }
 
 #student-list tr:nth-child(even) {
-    background-color: #f2f2f2
+    background-color: #f2f2f2;
+}
+
+#student-list tr:first-child {
+    background-color: #a3a3a3;
 }
 
 #add-student-wrapper {
