--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,6 +18,39 @@
     background-color: #a3a3a3;
 }
 
+input[type=text], input[type=number], input[type=email], select {
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+#filter-students {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+}
+
+#filter-students label {
+    margin: 5px 10px 5px 0;
+}
+
+#filter-students input {
+    min-width: 150px;
+    vertical-align: middle;
+    margin: 5px 10px 5px 0;
+    padding: 10px;
+    flex: 1;
+}
+
+#filter-students select {
+    min-width: 150px;
+    vertical-align: middle;
+    margin: 5px 10px 5px 0;
+    padding: 10px;
+    flex: 1;
+}
+
 #add-student-wrapper {
     width: 80%;
     margin: 5px auto;
@@ -26,14 +59,10 @@
     padding: 20px;
 }
 
-#add-student input[type=text], select {
+#add-student input {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
 }
 
 #add-student input[type=submit] {
@@ -65,5 +94,14 @@
     #add-student-wrapper {
         width: 99%;
         padding: 5px;
+    }
+
+    #filter-students input {
+        margin: 10px 0;
+    }
+
+    #filter-students {
+        flex-direction: column;
+        align-items: stretch;
     }
 }
