--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,37 +28,6 @@ body {
     width: 100%;
 }
 
-.delete-button {
-    border-radius: 5px;
-    background-color: #f44336;
-    border: none;
-    color: inherit;
-    padding: 7px 20px 7px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 15px;
-    cursor: pointer;
-}
-
-.error-msg {
-    color: #ff4c4c;
-    padding: 0 5px 5px 5px;
-}
-
-.err-highlight {
-    border: 2px solid red;
-}
-
-#student-empty-placeholder {
-    width: 100%;
-    text-align: center;
-}
-
-#student-empty-placeholder h2 {
-    margin-top: 15px;
-}
-
 input[type=text], input[type=number], input[type=email], select {
     background: #c7c7c7;
 }
@@ -96,21 +65,6 @@ input[type=text], input[type=number], input[type=email], select {
 .main {
     margin: 15px auto;
     width: 75%;
-}
-
-.center-text {
-    position: relative;
-    margin: auto;
-    width: 220px;
-    text-align: center;
-    font-size: 18px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    font-weight: bold;
-}
-
-.font-23 {
-    font-size: 23px;
 }
 
 .sub-menu-wrapper {
@@ -276,4 +230,55 @@ input[type=text], input[type=number], input[type=email], select {
     .active {
         background: none;
     }
+}
+
+
+.error-msg {
+    color: #ff4c4c;
+    padding: 0 5px 5px 5px;
+}
+
+.err-highlight {
+    border: 2px solid red;
+}
+
+#student-empty-placeholder {
+    width: 100%;
+    text-align: center;
+}
+
+#student-empty-placeholder h2 {
+    margin-top: 15px;
+}
+
+#student-entries-placeholder {
+    display: none;
+}
+
+.font-23 {
+    font-size: 23px;
+}
+
+.delete-button {
+    border-radius: 5px;
+    background-color: #f44336;
+    border: none;
+    color: inherit;
+    padding: 7px 20px 7px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.center-text {
+    position: relative;
+    margin: auto;
+    width: 220px;
+    text-align: center;
+    font-size: 18px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-weight: bold;
 }
