--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,6 +7,11 @@ body {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif
 }
 
+.fa:active, .fa-bars:active, a:active, i:active, span:active {
+    background: transparent;
+    -webkit-tap-highlight-color: transparent;
+}
+
 #student-list {
     border-collapse: collapse;
     width: 100%;
@@ -133,7 +138,7 @@ input[type=text], input[type=number], input[type=email], select {
     position: relative;
 }
 
-.title, .toggle {
+.nav-title, .toggle {
     display: none;
 }
 
@@ -142,7 +147,7 @@ input[type=text], input[type=number], input[type=email], select {
     display: flex;
 }
 
-.item a {
+.item a, .item span {
     display: block;
     text-decoration: none;
     color: inherit;
@@ -153,12 +158,7 @@ input[type=text], input[type=number], input[type=email], select {
     text-decoration: underline;
 }
 
-.toggle a:hover {
-    text-decoration: none;
-}
-
-.title a:hover {
-    text-decoration: none;
+.nav-title span:hover {
     cursor: context-menu;
 }
 
@@ -197,19 +197,20 @@ input[type=text], input[type=number], input[type=email], select {
         padding: 20px 0 20px 0;
     }
 
-    .title a {
+    .nav-title span {
         text-align: left;
+        width: 100%;
+        padding: 20px 0 20px 0;
     }
 
     .toggle {
         display: initial;
         cursor: pointer;
         align-self: flex-end;
-        right: 15px;
         position: absolute;
     }
 
-    .title {
+    .nav-title {
         display: initial;
         padding-left: 25px;
     }
